Ajustado o main e testado algumas cores.

--- a/cadastroEntregador.html
+++ b/cadastroEntregador.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<link rel="stylesheet" href="CSS/style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +10,9 @@
 
 <body>
     <header>
+
+    </header>
+    <main>
         <h1>Registre-se com</h1>
         <div id="cadastroAutomatizado">
             <button>
@@ -18,8 +22,6 @@
                 Google
             </button>
         </div>
-    </header>
-    <main>
         <h2>Ou</h2>
         <form action="">
             <div id="cadastroManual">
