Alterações de teste no bg e inputs

--- a/cadastroEntregador.html
+++ b/cadastroEntregador.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<link rel="stylesheet" href="CSS/style.css">
 
 <head>
+    <link rel="stylesheet" href="CSS/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Teste</title>
@@ -15,7 +15,7 @@
     <main>
         <h1>Registre-se com</h1>
         <div id="cadastroAutomatizado">
-            <button>
+            <button alt="Facebook">
                 Facebook
             </button>
             <button>
@@ -39,11 +39,11 @@
                 </div>
                 <div>
                     <label for="cpf">CPF</label>
-                    <input type="text" id="cpf" name="cpf" required>
+                    <input type="text" maxlength="11" id="cpf" name="cpf" required>
                 </div>
                 <div>
                     <label for="telefone">Telefone</label>
-                    <input type="tel" id="telefone" name="telefone" required>
+                    <input type="tel" maxlength="" id="telefone" name="telefone" required>
                 </div>
                 <div>
                     <label for="usuario">Usuário</label>
