Modificado o layout da página Home para comportar outros layouts

--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central de Layouts</title>
+    <link rel="stylesheet" href="indexcss.css">
 </head>
 
 <body>
-
-    <a href="matrix-login/loginTerminal.html">Página de Login Matrix</a>
-
+    <h1>Central de Layouts</h1>
+    <div class="galeriaLayouts">
+        <div id="layoutTerminal">
+            <p>Login Terminal</p>
+            <a href="matrix-login/loginTerminal.html">
+                <img src="imgs/loginTerminal.png" alt="Login Matrix">
+            </a>
+            <p><i>Qualquer usuário e senha funcionam no terminal.</i></p>
+        </div>
+    </div>
 </body>
 
 </html>
